v1.0.23 | 2025-05-13 | Add about | Add history | Update breadcrumbs | Add menu items | Reorder room nav | Fix spacing around en dash

--- a/src/assets/css/_layout.css
+++ b/src/assets/css/_layout.css
@@ -474,3 +474,10 @@ a.gv-tel-link {
 [id^="fnref"] {
   text-decoration: none;
 }
+
+#table-prices {
+  tr > td:nth-child(2),
+  tr > td:nth-child(3) {
+    text-align: end;
+  }
+}
